corpus/cpp/inheritance_virtual/case-01/snapshots/gcc15_plus/dual_sink_structured/render.default.txt
error: [inheritance_virtual] inheritance or virtual function error @ src/main.cpp:8:13
help: implement all pure virtual functions or fix the class hierarchy
raw : cannot declare variable 'value' to be of abstract type 'Derived'
| src/main.cpp:8:13
|     Derived value;
|             ^
note: because the following virtual functions are pure within 'Derived':
note: 'virtual int Base::value() const'
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output